# Transcribe-Audio-Keynotes

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  test.py
src/api/: apis.py  diarize.py
src/app/: app.py
src/helper/: excel_export.py
